refactor: remove flat participants/participantIds from ProposedSegment
Consolidate wrestler representation to teams-only. The flat participants
and participantIds fields were redundant with the nested teams/teamIds
structure and caused confusion about which was authoritative. AI service
now converts flat AI JSON output into singleton teams at the boundary;
all other callers use teams exclusively.